--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -31,3 +31,15 @@ spring:
             wall:
               config:
                 multi-statement-allow: true
+    redis:
+      host: 127.0.0.1
+      database: 0
+      port: 6379
+      password:
+      jedis:
+        pool:
+          max-active: 1000 # 连接池最大连接数（使用负值表示没有限制）
+          min-idle: 5      # 连接池中的最小空闲连接
+          max-idle: 10     # 连接池中的最大空闲连接
+          max-wait: 1000   # 连接池最大阻塞等待时间
+      timeout: 6000
