添加/images/captcha url免认证

--- a/src/main/resources/shiro.properties
+++ b/src/main/resources/shiro.properties
@@ -3,7 +3,7 @@ shiro.session_timeout=3600
 # rememberMe cookie有效时长，单位为秒
 shiro.cookie_timeout=86400
 # 免认证的路径配置，如静态资源等
-shiro.anon_url=/test/**,/febs/**,/image/**,/css/**,/layui/**,/json/**,/regist
+shiro.anon_url=/test/**,/febs/**,/image/**,/css/**,/layui/**,/json/**,/images/captcha,/regist
 # 登录 url
 shiro.login_url=/login
 # 首页 url
