--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,7 +5,7 @@ spring:
         druid:
           url: jdbc:mysql://127.0.0.1:3306/scaffold?allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&useSSL=false&autoReconnect=true&serverTimezone=Asia/Shanghai
           username: root
-          password: pingjin100
+          password: 123456
           initial-size: 10
           max-active: 100
           min-idle: 10
