--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -3,7 +3,7 @@ spring:
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.cj.jdbc.Driver
         druid:
-          url: jdbc:mysql://127.0.0.1:3306/scaffold?allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&useSSL=false&autoReconnect=true&serverTimezone=Asia/Shanghai
+          url: jdbc:mysql://127.0.0.1:3306/crm?allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&useSSL=false&autoReconnect=true&serverTimezone=Asia/Shanghai
           username: root
           password: 123456
           initial-size: 10
